fix: adjust sive of preview image on mobile screen

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -72,6 +72,7 @@
 
 .card__delete-btn:hover {
   background-image: url(../images/delete-icon_hover.svg);
+  cursor: pointer;
 }
 
 @media screen and (max-width: 627px) {
