--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -44,6 +44,8 @@
   background: transparent;
   display: flex;
   flex-direction: column;
+  justify-content: flex-end;
+  max-width: fit-content;
 }
 
 .modal__close-btn {
@@ -144,7 +146,8 @@
   }
 
   .modal__container_type_preview {
-    padding: 0 16px;
+    padding: 0 6px;
+    width: 100%;
   }
 
   .modal__image {
